test/corpus/ambiguities.txt
================================================================================
lval as expression statement (not assignment)
================================================================================

int main() {
  int a[3];
  a[0];
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)
              dim: (const_exp
                (expression
                  (number)))))))
      (block_item
        (statement
          (exp_stmt
            (expression
              (lval
                name: (identifier)
                index: (expression
                  (number))))))))))

================================================================================
lval followed by assignment (not expression)
================================================================================

int main() {
  int a[3];
  a[0] = 7;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)
              dim: (const_exp
                (expression
                  (number)))))))
      (block_item
        (statement
          (assign_stmt
            lval: (lval
              name: (identifier)
              index: (expression
                (number)))
            value: (expression
              (number))))))))

================================================================================
Plain identifier as expression statement
================================================================================

int main() {
  a;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (exp_stmt
            (expression
              (lval
                name: (identifier)))))))))

================================================================================
Plain identifier as assignment target
================================================================================

int main() {
  a = 1;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (assign_stmt
            lval: (lval
              name: (identifier))
            value: (expression
              (number))))))))
