test/corpus/comments.txt
================================================================================
Line comment before declaration
================================================================================

// this is a comment
int a;

--------------------------------------------------------------------------------

(compilation_unit
  (line_comment)
  (decl (var_decl (var_def name: (identifier)))))

================================================================================
Block comment before declaration
================================================================================

/* block comment */
int a;

--------------------------------------------------------------------------------

(compilation_unit
  (block_comment)
  (decl (var_decl (var_def name: (identifier)))))

================================================================================
Block comment with multiple asterisks
================================================================================

/***************************
 * odd number of asterisks *
 ***************************/
int a;

--------------------------------------------------------------------------------

(compilation_unit
  (block_comment)
  (decl (var_decl (var_def name: (identifier)))))

================================================================================
Inline comment after declaration
================================================================================

int a; // inline

--------------------------------------------------------------------------------

(compilation_unit
  (decl (var_decl (var_def name: (identifier))))
  (line_comment))
