test/corpus/declarations.txt
================================================================================
Global variable declaration
================================================================================

int a;

--------------------------------------------------------------------------------

(compilation_unit
  (decl
    (var_decl
      (var_def name: (identifier)))))

================================================================================
Multiple variable declarations
================================================================================

int a, b, c;

--------------------------------------------------------------------------------

(compilation_unit
  (decl
    (var_decl
      (var_def name: (identifier))
      (var_def name: (identifier))
      (var_def name: (identifier)))))

================================================================================
Variable declaration with initializer
================================================================================

int x = 42;

--------------------------------------------------------------------------------

(compilation_unit
  (decl
    (var_decl
      (var_def
        name: (identifier)
        init: (init_val
          exp: (expression (number)))))))

================================================================================
Array declaration
================================================================================

int arr[10];

--------------------------------------------------------------------------------

(compilation_unit
  (decl
    (var_decl
      (var_def
        name: (identifier)
        dim: (const_exp (expression (number)))))))

================================================================================
2D array declaration
================================================================================

int mat[3][4];

--------------------------------------------------------------------------------

(compilation_unit
  (decl
    (var_decl
      (var_def
        name: (identifier)
        dim: (const_exp (expression (number)))
        dim: (const_exp (expression (number)))))))

================================================================================
Array declaration with initializer
================================================================================

int arr[3] = {1, 2, 3};

--------------------------------------------------------------------------------

(compilation_unit
  (decl
    (var_decl
      (var_def
        name: (identifier)
        dim: (const_exp (expression (number)))
        init: (init_val
          item: (init_val exp: (expression (number)))
          item: (init_val exp: (expression (number)))
          item: (init_val exp: (expression (number))))))))

================================================================================
Array with empty initializer
================================================================================

int arr[5] = {};

--------------------------------------------------------------------------------

(compilation_unit
  (decl
    (var_decl
      (var_def
        name: (identifier)
        dim: (const_exp (expression (number)))
        init: (init_val)))))

================================================================================
Const declaration
================================================================================

const int N = 100;

--------------------------------------------------------------------------------

(compilation_unit
  (decl
    (const_decl
      (const_def
        name: (identifier)
        init: (const_init_val
          exp: (const_exp (expression (number))))))))

================================================================================
Const array declaration
================================================================================

const int SIZE[2] = {10, 20};

--------------------------------------------------------------------------------

(compilation_unit
  (decl
    (const_decl
      (const_def
        name: (identifier)
        dim: (const_exp (expression (number)))
        init: (const_init_val
          item: (const_init_val exp: (const_exp (expression (number))))
          item: (const_init_val exp: (const_exp (expression (number)))))))))

================================================================================
Multiple const definitions in one declaration
================================================================================

const int A = 1, B = 2;

--------------------------------------------------------------------------------

(compilation_unit
  (decl
    (const_decl
      (const_def
        name: (identifier)
        init: (const_init_val exp: (const_exp (expression (number)))))
      (const_def
        name: (identifier)
        init: (const_init_val exp: (const_exp (expression (number))))))))

================================================================================
Number literals: decimal, octal, hex
================================================================================

int a = 255;
int b = 0377;
int c = 0xFF;

--------------------------------------------------------------------------------

(compilation_unit
  (decl (var_decl (var_def name: (identifier) init: (init_val exp: (expression (number))))))
  (decl (var_decl (var_def name: (identifier) init: (init_val exp: (expression (number))))))
  (decl (var_decl (var_def name: (identifier) init: (init_val exp: (expression (number)))))))

================================================================================
Zero literal (octal rule)
================================================================================

int z = 0;

--------------------------------------------------------------------------------

(compilation_unit
  (decl
    (var_decl
      (var_def name: (identifier) init: (init_val exp: (expression (number)))))))
