test/corpus/expressions.txt
================================================================================
Arithmetic addition
================================================================================

int main() {
  int a;
  a = 1 + 2;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)))))
      (block_item
        (statement
          (assign_stmt
            lval: (lval
              name: (identifier))
            value: (expression
              (binary_expression
                left: (expression
                  (number))
                right: (expression
                  (number))))))))))

================================================================================
Operator precedence: mul before add
================================================================================

int main() {
  int a;
  a = 1 + 2 * 3;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)))))
      (block_item
        (statement
          (assign_stmt
            lval: (lval
              name: (identifier))
            value: (expression
              (binary_expression
                left: (expression
                  (number))
                right: (expression
                  (binary_expression
                    left: (expression
                      (number))
                    right: (expression
                      (number))))))))))))

================================================================================
Parenthesized expression overrides precedence
================================================================================

int main() {
  int a;
  a = (1 + 2) * 3;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)))))
      (block_item
        (statement
          (assign_stmt
            lval: (lval
              name: (identifier))
            value: (expression
              (binary_expression
                left: (expression
                  (parenthesized_expression
                    (condition
                      (expression
                        (binary_expression
                          left: (expression
                            (number))
                          right: (expression
                            (number)))))))
                right: (expression
                  (number))))))))))

================================================================================
Unary minus
================================================================================

int main() {
  int a;
  a = -1;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)))))
      (block_item
        (statement
          (assign_stmt
            lval: (lval
              name: (identifier))
            value: (expression
              (unary_expression
                operand: (expression
                  (number))))))))))

================================================================================
Unary plus
================================================================================

int main() {
  int a;
  a = +2;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)))))
      (block_item
        (statement
          (assign_stmt
            lval: (lval
              name: (identifier))
            value: (expression
              (unary_expression
                operand: (expression
                  (number))))))))))

================================================================================
Function call with arguments
================================================================================

int main() {
  int r;
  r = add(1, 2);
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)))))
      (block_item
        (statement
          (assign_stmt
            lval: (lval
              name: (identifier))
            value: (expression
              (call_expression
                function: (identifier)
                argument: (expression
                  (number))
                argument: (expression
                  (number))))))))))

================================================================================
Function call with no arguments
================================================================================

int main() {
  getint();
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (exp_stmt
            (expression
              (call_expression
                function: (identifier)))))))))

================================================================================
Array element as rvalue
================================================================================

int main() {
  int a[3];
  int b;
  b = a[0];
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)
              dim: (const_exp
                (expression
                  (number)))))))
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)))))
      (block_item
        (statement
          (assign_stmt
            lval: (lval
              name: (identifier))
            value: (expression
              (lval
                name: (identifier)
                index: (expression
                  (number))))))))))

================================================================================
Condition: relational operator
================================================================================

int main() {
  if (a < b) {}
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (if_stmt
            cond: (condition
              left: (condition
                (expression
                  (lval
                    name: (identifier))))
              right: (condition
                (expression
                  (lval
                    name: (identifier)))))
            then: (statement
              (block))))))))

================================================================================
Condition: logical AND
================================================================================

int main() {
  if (a && b) {}
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (if_stmt
            cond: (condition
              left: (condition
                (expression
                  (lval
                    name: (identifier))))
              right: (condition
                (expression
                  (lval
                    name: (identifier)))))
            then: (statement
              (block))))))))

================================================================================
Condition: logical NOT
================================================================================

int main() {
  if (!a) {}
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (if_stmt
            cond: (condition
              (expression
                (unary_expression
                  operand: (expression
                    (lval
                      name: (identifier))))))
            then: (statement
              (block))))))))

================================================================================
Condition: negation of relational expression
================================================================================

int main() {
  if (!(a < b)) {}
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (if_stmt
            cond: (condition
              (expression
                (unary_expression
                  operand: (expression
                    (parenthesized_expression
                      (condition
                        left: (condition
                          (expression
                            (lval
                              name: (identifier))))
                        right: (condition
                          (expression
                            (lval
                              name: (identifier))))))))))
            then: (statement
              (block))))))))

================================================================================
Condition precedence: && binds tighter than ||
================================================================================

int main() {
  if (a || b && c) {}
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (if_stmt
            cond: (condition
              left: (condition
                (expression
                  (lval
                    name: (identifier))))
              right: (condition
                left: (condition
                  (expression
                    (lval
                      name: (identifier))))
                right: (condition
                  (expression
                    (lval
                      name: (identifier))))))
            then: (statement
              (block))))))))
