test/corpus/statements.txt
================================================================================
Assignment statement
================================================================================

int main() {
  int x;
  x = 1;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)))))
      (block_item
        (statement
          (assign_stmt
            lval: (lval
              name: (identifier))
            value: (expression
              (number))))))))

================================================================================
Array element assignment
================================================================================

int main() {
  int a[3];
  a[1] = 5;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (decl
          (var_decl
            (var_def
              name: (identifier)
              dim: (const_exp
                (expression
                  (number)))))))
      (block_item
        (statement
          (assign_stmt
            lval: (lval
              name: (identifier)
              index: (expression
                (number)))
            value: (expression
              (number))))))))

================================================================================
Expression statement (function call)
================================================================================

int main() {
  putint(42);
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (exp_stmt
            (expression
              (call_expression
                function: (identifier)
                argument: (expression
                  (number))))))))))

================================================================================
Empty expression statement
================================================================================

int main() {
  ;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (exp_stmt))))))

================================================================================
If statement (no else)
================================================================================

int main() {
  if (a)
    b = 1;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (if_stmt
            cond: (condition
              (expression
                (lval
                  name: (identifier))))
            then: (statement
              (assign_stmt
                lval: (lval
                  name: (identifier))
                value: (expression
                  (number))))))))))

================================================================================
If-else statement
================================================================================

int main() {
  if (a) {
    b = 1;
  } else {
    b = 2;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (if_stmt
            cond: (condition
              (expression
                (lval
                  name: (identifier))))
            then: (statement
              (block
                (block_item
                  (statement
                    (assign_stmt
                      lval: (lval
                        name: (identifier))
                      value: (expression
                        (number)))))))
            else: (statement
              (block
                (block_item
                  (statement
                    (assign_stmt
                      lval: (lval
                        name: (identifier))
                      value: (expression
                        (number)))))))))))))

================================================================================
Dangling-else (else binds to nearest if)
================================================================================

int main() {
  if (a)
    if (b)
      x = 1;
    else
      x = 2;
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (if_stmt
            cond: (condition
              (expression
                (lval
                  name: (identifier))))
            then: (statement
              (if_stmt
                cond: (condition
                  (expression
                    (lval
                      name: (identifier))))
                then: (statement
                  (assign_stmt
                    lval: (lval
                      name: (identifier))
                    value: (expression
                      (number))))
                else: (statement
                  (assign_stmt
                    lval: (lval
                      name: (identifier))
                    value: (expression
                      (number))))))))))))

================================================================================
While statement
================================================================================

int main() {
  while (i < 10) {
    i = i + 1;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (while_stmt
            cond: (condition
              left: (condition
                (expression
                  (lval
                    name: (identifier))))
              right: (condition
                (expression
                  (number))))
            body: (statement
              (block
                (block_item
                  (statement
                    (assign_stmt
                      lval: (lval
                        name: (identifier))
                      value: (expression
                        (binary_expression
                          left: (expression
                            (lval
                              name: (identifier)))
                          right: (expression
                            (number)))))))))))))))

================================================================================
Break and continue
================================================================================

int main() {
  while (1) {
    break;
    continue;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (while_stmt
            cond: (condition
              (expression
                (number)))
            body: (statement
              (block
                (block_item
                  (statement
                    (break_stmt)))
                (block_item
                  (statement
                    (continue_stmt)))))))))))

================================================================================
Nested blocks
================================================================================

int main() {
  {
    int x = 1;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (function_def
    return_type: (func_type)
    name: (identifier)
    body: (block
      (block_item
        (statement
          (block
            (block_item
              (decl
                (var_decl
                  (var_def
                    name: (identifier)
                    init: (init_val
                      exp: (expression
                        (number)))))))))))))
